k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack
  namespace: bookstack
spec:
  type: NodePort
  selector:
    app: bookstack
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
